[package]
name = "sublinear"
version = "0.1.0"
edition = "2024"
description = "Dev-only Turso-backed Linear GraphQL replacement"
license = "MIT"
repository = "https://github.com/joshuapurtell/sublinear"

[dependencies]
anyhow = "1.0.98"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.6"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
libsql = "0.9.29"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
